the discussion and contributions

--- a/_posts/thesis_chapters/2025-7-6-Gdps_v6.md
+++ b/_posts/thesis_chapters/2025-7-6-Gdps_v6.md
@@ -76,7 +76,7 @@ Thus, to provide even greater focus, the action of implementing a game design pa
 
 At this level, the object of the action of implementing a game design pattern is more focused. Participants are focused on implementing or adapting a design pattern in their own game. This allows for analytical clarity and supports the argument that GDPs served not only as pedagogical scaffolds but also as conceptual anchors for the intervention's iterative development.
 
-The analysis that follows is organised using Rogoff’s three planes of analysis [@rogoff_observing_1995] [^r3]. Table 6.1 provides a summary of how GDPs function across these planes, acting as mediational tools that support individual game making  ability, shared practice, and broader community development. Each theme will be developed in turn using examples from participant activity [^3p].
+The analysis that follows is organised using Rogoff’s three planes of analysis [@rogoff_observing_1995] [^r3]. This chapter provides evidence and analysis of how GDPs function across these planes, acting as mediational tools that support individual game making  ability, shared practice, and broader community development. Each theme will be developed in turn using examples from participant activity [^3p].
 
 <!-- For a study of this nature, too broad an analysis risks insufficient detail to allow replication, too narrow risks being overly context dependant and limiting the potential for wider application. -->
 <!-- As the design progressed, it became useful to analyse smaller units of activity.  -->
@@ -98,21 +98,6 @@ NO - NOT REALLY - IT'S NOT CLEAR HOW TO DO THIS THAT WHY I DROPPED IT.
 <!-- MORE DETAIL - DIFFERENT COLUMNS - NAME ON RIGHT.
 MOVE LATER  -->
 
-
-| **GDP usage in game making**               | **Description (using CHAT concepts)**                                 |
-| ------------------------------------------ | --------------------------------------------------------------------- |
-| Personal appropriation:                    | GDPs used in appropriation of personal knowledge.                     |
-| Guided Participation / Interpersonal focus | GDPs as a framework for supporting resources and navigation|
-|    | GDPs used to scaffold ideation and prioritisation processes    |
-|                                            | GDPs used to aid the process of division of labour
-          |
-| Cultural activity focus          | GDPs can encourage learners to design for others|
-|                                            | GDPs facilitate the use of wider funds of knowledge (FoK)|
-|                                            | GDPs are propagated into the community through playtesting            |
-|                                            | GDPs as components of emerging repertoires in an evolving idioculture |
-
-
-Table 6.1: Summary of varied GDP use within the activity of this research
 
 
 
@@ -768,20 +753,37 @@ Other characteristics and norms of the emerging idioculture stemming which stem 
 * Rather than following the logic of fixed design stages, GDPs were taken up **opportunistically and recursively**, often re-entering the activity in unplanned ways.
 * This challenges linear design models and supports a **sociocultural view of design** as emergent, fluid, and shaped by shifting objects and mediational tools. -->
 
-Chapter 5, via a design narrative of the pedagogical design used, exposed tensions where existing mediational strategies or tools were insufficient, and thus innovative forms of mediation were needed.
+Chapter 5, via a design narrative of the pedagogical design used, exposed tensions where existing mediational strategies or tools were insufficient, and thus innovative forms of mediation were needed. This chapter has developed analysis of activity by focusing on the germ cell concept of GDPs used in a variety of ways, a summary of which has been represented in table form at the start of this chapter. GDPs are used in diverse ways by participants, peers and facilitators, as principle or supporting parts of mediational strategies including as as a lingua franca, as a motivational element, or as a way of structuring the learning experience and supporting resources. A summary of the diverse uses of GDPs is included within Table 6.x
 
-This chapter has developed analysis of activity by focusing on the germ cell concept of GDPs used in a variety of ways, a summary of which has been represented in table form at the start of this chapter. GDPs are used in diverse ways by participants, peers and facilitators, as principle or supporting parts of mediational strategies including as as a lingua franca, as a motivational element, or as a way of structuring the learning experience and supporting resources. GDPS, are used not just mediation as a tool, but also as a concept, so much so that it merits it's own activity system.
-REVISIT AND CLARIFY.
+<!-- GDPS, are used not just mediation as a tool, but also as a concept, so much so that it merits it's own activity system.
+REVISIT AND CLARIFY. -->
+
+
+| **GDP usage in game making**               | **Description (using CHAT concepts)**                                 |
+| ------------------------------------------ | --------------------------------------------------------------------- |
+| Personal appropriation:                    | GDPs used in appropriation of personal knowledge.                     |
+| Guided Participation / Interpersonal focus | GDPs as a framework for supporting resources and navigation|
+|    | GDPs used to scaffold ideation and prioritisation processes    |
+|                                            | GDPs used to aid the process of division of labour
+          |
+| Cultural activity focus          | GDPs can encourage learners to design for others|
+|                                            | GDPs facilitate the use of wider repertoires of practice and funds of knowledge |
+|                                            | GDPs are propagated through the community through playtesting            |
+|                                            | GDPs as components of emerging repertoires in an evolving idioculture |
+
+ADD Short examples
+
+Table 6.x: Summary of varied GDP use within the activity of this research
 
 A fuller table summarising this chapter's interpretation of the diverse roles of GDPs in the game-making activity using CHAT concepts and linking to supporting evidence is included in the Appendix WHICH ONE. The table lists example behaviours and notes vignettes or appendices where the behaviour can be found in situ with more detailed analysis.
 
-
-
  <!-- object of each game instance, can be interpreted as a shared object for expanded, interacting processes of activity. -->
 
-Given the complex and shared nature of both the objects of activity represented at the community game making process and the narrower scopes, attempts to represent the variety of uses of GDPs within the technique of triangular visual representations would be problematic. As Engeström and Saninno [@engestrom_mediated_2021] note in discussing challenges of representing new generations of AT, you can't keep adding triangles. In particular, the complexity in terms of the role of GDPs here which act sometimes as mediational strategies and at other times as motivational components of the object at hand would be difficult to communicate. Similarly, representation of the interplay of mediational strategies of tool use with the community level of activity and activity wider systems would also be challenging and unwieldy. As such, Chapter 7 explores novel ways to represent both the learner experience in this design and an overall conception of agency development.
+<!-- THIS IS SEEMS COMPLICATED - THE IDEA WAS THAT IT'S HARD TO VISUALLY REPRESENT. SO JUST DESCRIBE -->
 
-LINK TO EXPLORATION OF COMPLEX OBJECT BELOW?
+The objects of activity represented at the community game making process and the narrower scopes are complex in nature and shared between intersecting activity systems. Complexity is present particularly in the varied role of GDPs, in varied instantiations as a germ cell concept. At times functioning with mediational strategies and at other times as motivational components of the object at hand. Additional complexity is present in of the interplay of mediational strategies of tool use with the community level of activity and activity wider systems. An example of this is the importation of GDP concepts from professional and home practices, transformation within individual or pair driven activity, and subsequent propagation into wider community practices described in this chapter.
+
+Given this complexity, in part added by incorporating greater movement between activity systems, I found attempts to represent a holistic, conceptual representation of the uses of GDPs within the technique of triangular visual representations to be problematic. This is a known challenge. As Engeström and Saninno [-@engestrom_mediated_2021] note in discussing challenges of representing a forth generations of AT, you can not just keep "adding triangles" to reflect such transformations and movement between systems [^triangle]: referring to triangular diagrams that characterise 3GAT see chapters 3 and 4. Instead, it seems more profitable to take a more focused approach. As such, Chapter 7 develops the findings of this chapter explores novel ways to represent the and an overall conception of agency development in this design.
 
 
 <!-- The findings expose complex activity which presents challenges in terms of graphical representation using 3GAT methods. The uses of GDPs within the quick-start activities, tutorials, and code snippets as supporting tools, if viewed in isolation, can be seen as a triangular form of mediation involving subject, tool, and object mediation . -->
@@ -805,37 +807,31 @@ LINK TO EXPLORATION OF COMPLEX OBJECT BELOW?
 
 <!-- [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic],  -->
 
-Chapter 2 explored the diversity with in CGD&P research concerning motivations from developing programming skills and computational thinking other subject knowledge, systems thinking, to 21st Century skills. Within this literature, as explored in Chapter 2,  a strand grouped around different forms of technical fluency [@papert_technological_1995]  with common features of domain proficiency, self-expression and identity formation and an experience of flow. The following discussion contributes to this strand within CGD&P research.
+Developing the theme of the complexity of object of activity, this section discusses the motivational component driving the broad activity of the game making programme. Chapter 2 explored research on the diversity of motivations for undertaking CGD&P, including: developing programming skills,  computational thinking, other subject knowledge, systems thinking, and 21st Century skills. Within constructionist research in particular strands exists of different forms of technical fluency [@papert_technological_1995] [^fluency]: See Chapter two: strands include computational, digital, and gaming fluency. These strands of fluency have  common features of domain proficiency, self-expression and identity formation and an experience of flow. Constructionist researchers have also promoted processes of design thinking, in particular the work of Resnick on design spiral to engender such fluency [@resnick_all_2007]. The following discussion contributes to this line of thinking within CGD&P research, in part through the use of CHAT concepts.
 
-One of the motivational factors guiding the evolution of the learning design of this study was to keep participants able to effectively share their social identity within game making and thus remaining or in a state of flow [@mao_optimal_2016] [^fl]. The guiding principle being to build technical proficiency with the relevant technology to to allow the share interests and identity within a community of peers.
+Returning first to my own findings, one of the motivational factors guiding the evolution of the learning design of this study was to keep participants able to effectively share their social identity within game making and thus remaining in a state of engagement and flow [@mao_optimal_2016] [^fl]. The facilitation process involved supporting participants  to build technical proficiency with the relevant technology to then allow them to share interests and identity within a community of peers. This chapter has in part identified manifestations of such fluency and identify expression via in the mediational uses of GDPs. Younger participants in particular developed impressively fluid practice demonstrating extremely rapids shifts between code editing, game testing, authoring assets in online tools and migrating files often while talking with peers. Following, CHAT I  interpret this increased  proficiency  as  transformation of actions into more fluent operations [@leontiev_activity_2009].
 
-It is of value to now identifying manifestations of such fluency and identify (ISN'T THAT THE WHOLE CHAPTER?) the techniques used to design for this behaviour via in the mediational uses of GDPs outlined in this chapter. In other words, what can be observed about the interaction of participants use of GDPs and the experience of participant fluency?
-
+<!-- In other words, what can be observed about the interaction of participants use of GDPs and the experience of participant fluency? -->
 <!-- , and to surface additional socio-cultural concepts useful for an enriched understanding of processes as play.   -->
 
-Observations of participant design behaviour did not align with common design thinking concepts or design cycle frameworks advocated in CGD&P [@resnick_all_2007; @winarno_steps_2020-1; @dam_5_2024]. The stages were instead fragmented and sometimes happened in parallel. In many interactions, I observed improvisational approaches which incorporated ideation, planning, implementation, and testing in the space of a minute or so. Younger participants in particular developed impressively fluid practice demonstrating extremely rapids shifts between code editing, game testing, authoring assets in online tools and migrating files often while talking with peers. Older participants also showed rapid, responsive creativity. Above Toby's increased navigational proficiency was interpreted as  transformation of actions into more fluent operations [@leontiev_activity_2009].
+For many, this fluency incorporated improvisational characteristics. Clive (p) quickly incorporated a boost to player health after a level after being given feedback during playtesting. Tehliah's bonus level idea appears to emerge spontaneously (Vignette 2). Pairs often adopted a similar spirit of improvisation. For example, parent Dan makes a suggestion (Vignette 6) - "Use paper to design?" - to which Toby replies "I'm just going with it." In exploring sound making software (Vignette 3), Ed and Mark start a process of tinkering and messing about with the capability of the tools which spurs creativity. The joint improvisation created two different soundtracks. This sparks a new proposal to incorporate different soundtracks for different levels.
 
-Clive (p) quickly incorporated a boost to player health after a level after being given feedback during playtesting. In exploring sound making software Ed and Mark start a process of tinkering and messing about with the capability of the tools which spurs creativity. The joint improvisation created two different soundtracks. This sparks a new proposal to incorporate different soundtracks for different levels. Pairs often adopted a similar spirit of improvisation. For example parent Dan makes a suggestion - "Use paper to design?" - to which Toby replies "I'm just going with it."
+The structuring of the learning design around the process of repeated implementation of GDPs appears to align with an iterative design thinking approach. However these observations of participant design behaviour did not align with  design cycle frameworks advocated within constructionist reasearch [@resnick_all_2007; @winarno_steps_2020-1; @dam_5_2024]. The stages were instead fragmented and sometimes happened in parallel.  The video data contains many such improvisational approaches which incorporate ideation, planning, implementation, and testing in the space of a minute or so. Using Mark's words from in Vignette 3, for many, the process was far from systematic, involving a responsive "jumping around".
 
-Extending Basawapatna and colleagues [-[@basawapatna_zones_2013]] approach to support  flow SOCIAL FLOW? (see Chapter 2 ) via just in time documentation aligned with participants goal to support participant engagement, adding greater specificity and choice over which game patterns participants implement. This adaptation help greater alignment with research on the interdependence of flow experience and possibilities for social identity development [@mao_optimal_2016].
+While not supported by systematic data analysis, the findings of this chapter suggest a relationship between the fluid, expressive and improvisational behaviour described and the supporting resources which allowed choice over learner pathway, specifically which GDPs to implement and in which order. Certainly, this adaptation aligns with research on the interdependence of flow experience and possibilities for social identity development [@mao_optimal_2016]. Thus, as a contribution to GGD&P research, my findings extending Basawapatna and colleagues [-[@basawapatna_zones_2013] approach to support flow via just in time documentation aligned with participants goal to support participant engagement, by providing  mechanisms, structured around a curated set of GDPs and a stage-based development. The findings of the chapter also offer an alternative to the graceful flow of represented in the creative design spiral (and similar representations design cycles), positioning practice for many as more responsive, messy, and productively chaotic process [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic].
 
+Most specifically, the diverse meditational and motivational strategies of participants described in this chapter extend existing studies on use of GDPs, within educational context for young people. While Chapter 2 described a study addressed some areas of GDPs use within a game co-design process [@eriksson_using_2019], it was provided limited detail and focused primarily on utility of GDPs for researchers as a lingua franca and to structure analytical framing. The greater focus of my study on participant use of GDPs, in particular their importation from other contexts, their transformation within the developing idioculture of the game making context, and detailed description of the resulting variety of use extents this line of research significantly.
 
 <!-- In terms of conceptualising the complex object of activity as a whole, the work of Blunden on activity as a project is helpful to this process,  [@blunden_collaborative_2014].
 PERHAPS BUT HOW SO? -->
 
-LINK BACK TO NEW MODEL OF DESIGN BUILD TEST IN CHAPTER 5.
-Signposting to Chapter 7.
 
 
-### Closing synthesis
 
-**patterns of use and trajectories of learning**
-
-3GAT guides researchers  to describe expansions of the object of activity. To recap the complex nature of the component part of object according to activity theory, includes the physical or digital objects being worked, and the object concept incorporating the motivations of the participants and the overall activity [@blunden_activity_2023]. Part of the process of expansion of the complex object of activity, is driven by the unfixed nature of the motivations of those taking part within this research process [@cormier2008rhizomatic]. Chapter 5 charted shifting motivations via the changing learning design [^sm]. As a learning designer, in P3 I attempted to reduce play paradox outlined above by encouraging and highlighting social and cultural aspect of the object at play.
 
 <!-- GDPs played layered roles in the learning process: as **scaffolds**, **shared concepts**, and **catalysts for divergence**. -->
 
-The findings of this chapter extend existing studies on use of GDPs, within educational context for young people. In Chapter two a rare study addressing [@eriksson_using_2019],  primarily focused on utility for researchers, positioning GDPs as a a common language between researchers to  structure analytical framing. The broad range focused on practice in this chapter extends this work significantly QUICK SUMMARY HOW?. In addition, in Chapter 7 broader conceptual contributions  in relation to abstract and concrete dimensions of knowledge and practice are developed.  
+<!-- In addition, in Chapter 7 broader conceptual contributions  in relation to abstract and concrete dimensions of knowledge and practice are developed.   -->
 
 <!-- The process of curating patterns for Stringforce involved selecting only 14 from the full collection [@eriksson_using_2019]. The criteria for choosing patterns to include in the co-design stages considered several factors. Concrete patterns were prioritised over more abstract ones to support learner comprehension, selected patterns aligned with the learners' capabilities, and patterns related to game mechanics were favoured, along with those suggested by the learners. The Stringforce study highlighted several aspects of GDP utility. GDP concepts functioned as a common language between researchers and participants, helped structure analytical framing, and served as reference points for participants' design proposals [@eriksson_using_2019]. Overall, the findings primarily emphasise benefits for researchers, advancing GDPs as a form of intermediate knowledge that contributes to the field of child-computer interaction research (CCI) -->
 
@@ -881,7 +877,7 @@ This chapter has begun to address Research Question 2, which asked how a collect
 
 [^sm]: In the latter stages of the design process (D3), my motivation shifted to align with curricular concerns. AS FOOTNOTE? SEE WORK IN APPENDIX
 
-[^fl]: The value of flow to enhance motivation, deepen engagement, and improves learning outcomes  stems from my own intuitive practice and is supported  by wider work on flow theory and game based approaches [@whitton_investigation_2007; @perttula_flow_2017].
+[^fl]: The value of flow to enhance motivation, deepen engagement, and improves learning outcomes  stems from my own reflexive practice and is supported  by wider work on flow theory and game based approaches [@whitton_investigation_2007; @perttula_flow_2017].
 
 
 
